find_package(OpenSceneGraph COMPONENTS osgDB)
if(OPENSCENEGRAPH_FOUND)
	include_directories(${OPENSCENEGRAPH_INCLUDE_DIRS})
	add_executable(detailed_list detailed_list.cpp)
	target_link_libraries(detailed_list cppintrospection ${OPENSCENEGRAPH_LIBRARIES})
	add_dependencies(detailed_list osgwrapper_osg)
	add_dependencies(examples detailed_list)
endif()
