find_package(OpenSceneGraph COMPONENTS osgDB osgViewer osgGA)
if(OPENSCENEGRAPH_FOUND)
	include_directories(${OPENSCENEGRAPH_INCLUDE_DIRS})
	add_executable(simple_example simple_example.cpp)
	target_link_libraries(simple_example cppintrospection ${OPENSCENEGRAPH_LIBRARIES})
	add_dependencies(simple_example osgwrapper_osg osgwrapper_osgGA osgwrapper_osgViewer)
	add_dependencies(examples simple_example)
endif()
